fix events table vertical alignment; twitter button hover color

--- a/source/stylesheets/modules/_schedule.scss
+++ b/source/stylesheets/modules/_schedule.scss
@@ -1,6 +1,7 @@
 // Event Schedule
 .mod-events {
   td {
+    vertical-align: top;
     padding: 0.25em;
     border: none;
   }
