--- a/source/stylesheets/modules/_twitter.scss
+++ b/source/stylesheets/modules/_twitter.scss
@@ -4,4 +4,8 @@
   font-size: 1.5em;
   text-align: center;
   text-shadow: 0 1px 1px white;
+
+  a:hover {
+    color: #999;
+  }
 }
